# AUV_tasks

./: README.md
ros_chat/: CMakeLists.txt  package.xml
ros_chat/scripts/: ros_chat_publisher.py  ros_chat_subscriber.py
task_2/: CMakeLists.txt  package.xml
task_2/scripts/: add_5.py  multiply_by_10.py  publisher.py
task_3/: CMakeLists.txt  package.xml
task_3/msg/: bot_pose.msg
task_3/scripts/: bot_subscriber.py  movement_publisher.py
